Fixed the closeButton calculations to position on the button corner. Basic code to make a TelepathyChannel for launching conversations Fixed a few other things: hspace check for first item in layout, item-spacing, naming schemes

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -1659,7 +1659,7 @@ StTooltip StLabel {
 /* Journal */
 
 .journal {
-    item-spacing: 24px;
+    item-spacing: 36px;
     row-spacing: 24px;
     color: white;
 }
